# Pathfinder_student_portal

./: .gitignore  ADMIN_PERFORMANCE_FIX.md  AUTH_FIX.md  CORS_FIX.md  ITEMS_PER_PAGE_FEATURE.md  SHEET DATA 3615002 pc (1).xlsx  SHEET DATA 3615003 m.xlsx  STUDENT_LOGIN_FIX.md  STUDENT_REGISTRY_ENHANCEMENTS.md  TEST_LOADING_PERFORMANCE_FIX.md  chapters_export_with_codes.csv  check_erp_schedules.py  debug_package.py  probe_admin_classes.py  rounded_search.txt  test_erp_endpoints.py  test_student_auth.py  topics_export.csv
backend/: .env  .gitignore  analyze_erp_students.py  associate_materials_study_sec.py  associate_materials_v2.py  backup_library.py  build.sh  centres_list.txt  check_all_q5.py  check_ans_types.py  check_cache.py  check_csv.py  check_docs.py  check_duplicate_topics.py  check_dups.py  check_fields.py  check_foundation_tests.py  check_ids.py  check_library_duplicates.py  check_m2m_raw.py  check_output.txt  check_pub.py  check_serializer.py  check_status.py  check_submission.py  check_test.py  check_test_4.py  check_test_mongo.py  check_test_session.py  check_test_status.py  check_test_v2.py  check_user.py  check_users.py  check_videos.py  clean_analysis.py  clean_classes.py  clean_db.py  cleanup_db.py  cleanup_dups.py  cleanup_users.py  (+120 more)
backend/api/: admin.py  apps.py  authentication.py  db_utils.py  erp_views.py  gemini_views.py  middleware.py  models.py  scholarlab_views.py  serializers.py  swot_analytics.py  urls.py  views.py
backend/centres/: apps.py  models.py  serializers.py  urls.py  views.py
backend/core/: __init__.py  csrf_middleware.py  (+3 more)
(+345 files in other folders)
